--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/catalog.css">
+    <link rel="stylesheet" href="./css/animation.css">
     <title>Catalog</title>
 </head>
 
@@ -23,7 +24,7 @@
                 <h1 class="category__title">CATEGORY PRODUCTS</h1>
                     <ul class="category__home">
                         <li><a class="category__home-item" href="../index.html">Home</a></li>
-                        <li><img class="arrow-home" src="../img/arrowblack.svg" alt="arrow"></li>
+                        <li><img class="category__home-arrow" src="../img/arrowblack.svg" alt="arrow"></li>
                         <li class="category__home-it">Catalog</li>
                     </ul>                
             </div>
@@ -32,28 +33,28 @@
         <div class="catalog">
             <div class="container">
                 <ul class="catalog__product">
-                    <li class="catalog__kid"><img class="catalog__kids__img" src="../img/kids.jpg" alt="kids" width="280" height="270">  
-                        <a href="#" class="kid-text">APPAREL KIDS</a></li>
-                    <li class="catalog__sh"><img class="catalog__shop__img" src="../img/holiday.png" alt="HOLIDAY SHOP" width="208" height="244">
-                        <a href="#" class="sh-text">HOLIDAY SHOP</a></li>
-                    <li class="catalog__toy"><img class="catalog__toys__img" src="../img/toys.png" alt="toys" width="280" height="270">
-                        <a href="#" class="toy-text">TOYS</a></li>
-                    <li class="catalog__access"><img class="catalog__accessories__img" src="../img/accessories.png" alt="accessories" width="240" height="250">
-                        <a href="#" class="access-text">ACCESSORIES</a></li>
-                        <li class="catalog__bird"><img class="catalog__bird__img" src="../img/bird.png" alt="bird" width="248" height="248">
-                        <a href="#" class="bird-text">SALE</a></li>
-                        <li class="catalog__rabbit"><img class="catalog__rabbit__img" src="../img/rabbit.png" alt="rabbit" width="271" height="204">
-                        <a href="#" class="rabbit-text">APPAREL ADULTS</a></li>
+                    <li class="catalog__product-kid"><img class="catalog__kids__img" src="../img/kids.jpg" alt="kids" width="280" height="270">  
+                        <a href="#" class="catalog__product-text">APPAREL KIDS</a></li>
+                    <li class="catalog__product-sh"><img class="catalog__shop__img" src="../img/holiday.png" alt="HOLIDAY SHOP" width="208" height="244">
+                        <a href="#" class="catalog__product-shtext">HOLIDAY SHOP</a></li>
+                    <li class="catalog__product-toy"><img class="catalog__toys__img" src="../img/toys.png" alt="toys" width="280" height="270">
+                        <a href="#" class="catalog__product-toytext">TOYS</a></li>
+                    <li class="catalog__product-access"><img class="catalog__accessories__img" src="../img/accessories.png" alt="accessories" width="240" height="250">
+                        <a href="#" class="catalog__product-accesstext">ACCESSORIES</a></li>
+                        <li class="catalog__product-bird"><img class="catalog__bird__img" src="../img/bird.png" alt="bird" width="248" height="248">
+                        <a href="#" class="catalog__product-birdtext">SALE</a></li>
+                        <li class="catalog__product-rabbit"><img class="catalog__rabbit__img" src="../img/rabbit.png" alt="rabbit" width="271" height="204">
+                        <a href="#" class="catalog__product-rabbittext">APPAREL ADULTS</a></li>
                 </ul>
             </div>
         </div>
 
-        <section class="product-description">
+        <section class="description">
             <div class="container">
-                <h2 class="product-title">Product Description</h2>
-                <p class="product-text">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
-                <p class="product-desc">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
-                <p class="product-slogan">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
+                <h2 class="description__producttitle">Product Description</h2>
+                <p class="description__producttext">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
+                <p class="description__productdesc">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
+                <p class="description__productslogan">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
             </div>
         </section>
        
