--- a/source/blog.html
+++ b/source/blog.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@700&family=Crimson+Text:ital,wght@1,700&family=Lato:wght@700&family=Montserrat:wght@200;300;600;700&family=Open+Sans:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/toys.css">
     <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="./css/animation.css">
     <title>Blog</title>
 </head>
 <body>
@@ -25,7 +23,7 @@
                 <h1 class="blog__title">Blog</h1>
                     <ul class="blog__home">
                         <li><a class="blog__home-it" href="../index.html">Home</a></li>
-                        <li><img class="arrow-blog" src="../img/arrowblack.svg" alt="arrow"></li>
+                        <li><img class="blog__arrow-blog" src="../img/arrowblack.svg" alt="arrow"></li>
                         <li><a class="blog__home-item" href="#">Blog</a></li>
                     </ul>                
             </div>
@@ -36,49 +34,35 @@
                 <div class="titles__wrapper">
                     <ul class="des">
                         <li class="titles__des"><img class="titles__des__img" src="../img/des.png" alt="des" width="380" height="220">
-                            <p class="des__date">23rd August 2018</p>
-                            <a href="#" class="des__title">Top 5 fastest growing it service companies in philly</a>
-                            <p class="des__text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
+                            <p class="titles__date">23rd August 2018</p>
+                            <a href="#" class="titles__tl">Top 5 fastest growing it service companies in philly</a>
+                            <p class="titles__text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
                             <li class="panda"><img class="titles__panda__img" src="../img/panda.png" alt="panda" width="380" height="220">
-                                <p class="panda__date">23rd August 2018</p>
-                                <a href="#" class="panda__title">Best financial</a>
-                                <p class="panda__text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
+                                <p class="titles__panda-date">23rd August 2018</p>
+                                <a href="#" class="titles__panda-tl">Best financial</a>
+                                <p class="titles__panda-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
                             <li class="monkey"><img class="titles-monkey-img" src="../img/monkey.png" alt="monkey" width="380" height="220">
-                                <p class="monkey__date">23rd August 2018</p>
-                                <a href="#" class="monkey__title">Company logo or brand identity: which one is more important? brand identity</a>
-                                <p class="monkey__text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
+                                <p class="titles__monkey-date">23rd August 2018</p>
+                                <a href="#" class="titles__monkey-tl">Company logo or brand identity: which one is more important? brand identity</a>
+                                <p class="titles__monkey-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
                             <li class="baz"><img class="titles-baz-img" src="../img/baz.png" alt="baz">
-                                <p class="baz__date">23rd August 2018</p>
-                                <a href="#" class="baz__title">Best financial</a>
-                                <p class="baz__text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
+                                <p class="titles__baz-date">23rd August 2018</p>
+                                <a href="#" class="titles__baz-tl">Best financial</a>
+                                <p class="titles__baz-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
                             <li class="prinesse"><img class="titles-prinesse-img" src="../img/prinesse.png" alt="prinesse" width="380" height="220">
-                                <p class="prinesse__date">23rd August 2018</p>
-                                <a href="#" class="prinesse__title">Company logo or brand identity: which one is more important? brand identity</a>
-                                <p class="prinesse__text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
+                                <p class="titles__prinesse-date">23rd August 2018</p>
+                                <a href="#" class="titles__prinesse-tl">Company logo or brand identity: which one is more important? brand identity</a>
+                                <p class="titles__prinesse-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
                             <li class="cubes"><img class="titles-cubes-img" src="../img/cubes.png" alt="cubes" width="380" height="220">
-                                <p class="cubes__date">23rd August 2018</p>
-                                <a href="#" class="cubes__title">Top 5 fastest growing it service companies in philly</a>
-                                <p class="cubes__text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
+                                <p class="titles__cubes-date">23rd August 2018</p>
+                                <a href="#" class="titles__cubes-tl">Top 5 fastest growing it service companies in philly</a>
+                                <p class="titles__cubes-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="slider">
-            <div class="container">
-                <div class="slider__wrapper">
-                    <img class="slider__img__left" src="../img/arrowleftwhite.svg" alt="arrowleft">
-                <ul class="slider__list">
-                    <li class="slider__list-item">1</li>
-                    <li class="slider__list-item">2</li>
-                    <li class="slider__list-item">3</li>
-                    <li class="slider__list-item">4</li>
-                </ul>
-                <img class="slider__img__rigth" src="../img/arrowrightwhite.svg" alt="arrowright">
-                </div>
-            </div>
-        </div>
+        @@include('blocks/slider.html')
     </main>
-
     @@include('blocks/footer.html')
 
 </body>
