--- a/source/toys.html
+++ b/source/toys.html
@@ -22,7 +22,7 @@
             <h1 class="toy__title">Toy for kids</h1>
                 <ul class="toy__home">
                     <li><a class="toy__home-item" href="../index.html">Home</a></li>
-                    <li><img class="arrow-home" src="../img/arrowblack.svg" alt="arrow"></li>
+                    <li><img class="toy__home-arrow" src="../img/arrowblack.svg" alt="arrow"></li>
                     <li><a class="toy__home-it" href="./catalog.html">Catalog</a></li>
                     <li><img class="arrow-home" src="../img/arrowblack.svg" alt="arrow"></li>
                     <li class="toy__home-ite">Toys</li>
@@ -33,52 +33,56 @@
     <section class="filters">
         <div class="container">
             <div class="filters__navigations">
-                <div class="cost">
-                    <h2 class="filter-cost">Cost</h2>
-                    <input class="range-input" type="range" min="0" max="500" value="50" name="range" step="1">
-                    <div class="cost__items">
-                        <p class="cost__item">0</p>
-                        <p class="cost__item">500</p>
+                <div class="filters__cost">
+                    <h2 class="filters__cost-text">Cost</h2>
+                    <input class="filters__cost-input" type="range" min="0" max="500" value="50" name="range" step="1">
+                    <div class="filters__cost-items">
+                        <p class="filters__cost-item">0</p>
+                        <p class="filters__cost-item">500</p>
                     </div>
                 </div>
                 <div class="colouring">
                     <p class="colouring__text">Color</p>
-                    <input type="checkbox" id="black" name="color">
-                      <label class="colouring-item" for="black"><span class="checkmark">Black</span></label>
-                      <input type="checkbox" id="blue" name="color">
-                      <label class="colouring-item" for="blue"><span class="checkmark">Blue</span></label>
-                      <input type="checkbox" id="green" name="color">
-                      <label class="colouring-item" for="green"><span class="checkmark">Green</span></label>
-                      <input type="checkbox" id="white" name="color">
-                      <label class="colouring-item" for="white"><span class="checkmark">White</span></label>
+                    <input class="colouring__chekbox" type="checkbox" id="black" name="color">
+                      <label class="colouring__item" for="black"><span class="colouring__checkmark">Black</span></label>
+                      <input class="colouring__chekbox" type="checkbox" id="blue" name="color">
+                      <label class="colouring__item" for="blue"><span class="colouring__checkmark">Blue</span></label>
+                      <input class="colouring__chekbox" type="checkbox" id="green" name="color">
+                      <label class="colouring__item" for="green"><span class="colouring__checkmark">Green</span></label>
+                      <input class="colouring__chekbox" type="checkbox" id="white" name="color">
+                      <label class="colouring__item" for="white"><span class="colouring__checkmark">White</span></label>
                     </div>
                        <div class="filters__delivery">
-                        <p class="filters__text">Delivery</p>
-                        <div class="radio">
-                            <input class="radio__input" name="free" type="radio" id="radio_1">
-                            <label class="radio__label" for="radio_1"><span class="checkmark-radio">Free shipping</span></label>
+                        <p class="filters__delivery-text">Delivery</p>
+                        <div class="filters__delivery-radio">
+                            <input class="filters__delivery-input" name="free" type="radio" id="radio_1">
+                            <label class="filters__delivery-label" for="radio_1"><span class="filters__delivery-checkmark">Free shipping</span></label>
                         </div> 
-                        <div class="radio">
-                            <input class="radio__input" name="free" type="radio" id="radio_2">
-                            <label class="radio__label" for="radio_2"><span class="checkmark-radio">Fast shipping</span></label>
+                        <div class="filters__delivery-radio">
+                            <input class="filters__delivery-input" name="free" type="radio" id="radio_2">
+                            <label class="filters__delivery-label" for="radio_2"><span class="filters__delivery-checkmark">Fast shipping</span></label>
                         </div> 
                        </div>
-                       <div class="amount-group">
-                        <p class="amount-title">Amount</p>
-                            <div class="amount-group-item">
-                                <input id="radio__one" type="radio" name="radio" value="1" checked>
-                                <label for="radio__one"><span class="amoun-number">0-5</span></label>
+                       <div class="amount">
+                        <p class="amount__title">Amount</p>
+                            <div class="amount__group-item">
+                                <input class="amount__group-in" id="radio__one" type="radio" name="radio" value="1" checked>
+                                <label class="amount__group-label" for="radio__one"><span class="amount__group-number">0-5</span></label>
                             </div>
-                            <div class="amount-group-item">
-                                <input id="radio__two" type="radio" name="radio" value="2">
-                                <label for="radio__two"><span class="amoun-number">10-20</span></label>
+                            <div class="amount__group-item">
+                                <input class="amount__group-in" id="radio__two" type="radio" name="radio" value="2">
+                                <label class="amount__group-label" for="radio__two"><span class="amount__group-number">10-20</span></label>
                             </div>
-                            <div class="amount-group-item">
-                                <input id="radio__three" type="radio" name="radio" value="3">
-                                <label for="radio__three"><span class="amoun-number">20-50</span></label>
+                            <div class="amount__group-item">
+                                <input class="amount__group-in" id="radio__three" type="radio" name="radio" value="3">
+                                <label class="amount__group-label" for="radio__three"><span class="amount__group-number">20-50</span></label>
                         </div>
                        </div>
-                       <button type="submit" class="button amount-button amount-button--style">Apply</button>
+                       @@include('blocks/button.html', {
+                        "button-text": "Apply",
+                        "class": "amount__group-button",
+                      })
+                       <!-- <button type="submit" class="button amount-button amount-button--style">Apply</button> -->
             </div>
         </div>
     </section>
@@ -88,83 +92,69 @@
             <div class="catalog__wrap">
                 <div class="catalog__shark">
                     <img src="../img/shark.png" alt="shark" width="380" height="385">
-                    <a class="shark-learn" href="#">
-                        <div class="learn-more-shark">
-                            <p class="shark-text">LEARN MORE</p>
+                    <a class="catalog__shark-learn" href="#">
+                        <div class="catalog__shark-learnmore">
+                            <p class="catalog__sharktext">LEARN MORE</p>
                         </div>
                     </a>
-                    <h3 class="catalog__name__shark">SHARKY BEAN BAG CHAIR COVER</h3>
-                    <p class="price-shark">$60.00 USD</p>
+                    <h3 class="catalog__sharktitle">SHARKY BEAN BAG CHAIR COVER</h3>
+                    <p class="catalog__shark-price">$60.00 USD</p>
                 </div>
                 <div class="catalog__brass">
                     <img src="../img/brass.png" alt="brass" width="380" height="385">
-                    <a class="brass-learn" href="#">
-                        <div class="learn-more-brass">
-                            <p class="brass-text">LEARN MORE</p>
+                    <a class="catalog__brass-learn" href="#">
+                        <div class="catalog__more-brass">
+                            <p class="catalog__brasstext">LEARN MORE</p>
                         </div>
                     </a>
-                    <p class="catalog__name__brass">BRASS DECO FRAMES</p>
-                    <p class="price-brass">$66.00 USD</p>
+                    <p class="catalog__name-brass">BRASS DECO FRAMES</p>
+                    <p class="catalog__price-brass">$66.00 USD</p>
                 </div>
             <div class="catalog__cibo">
                 <img src="../img/cibo.png" alt="cibo" width="380" height="385">
-                <a class="cibo-learn" href="#">
-                    <div class="learn-more-cibo">
-                        <p class="cibo-text">LEARN MORE</p>
+                <a class="catalog__cibo-learn" href="#">
+                    <div class="catalog__more-cibo">
+                        <p class="catalog__cibotext">LEARN MORE</p>
                     </div>
                 </a>
-                <p class="catalog__name__cibo">CIBO FULL APRON</p>
-                <p class="price-cibo">$60.00 USD</p>
+                <p class="catalog__name-cibo">CIBO FULL APRON</p>
+                <p class="catalog__price-cibo">$60.00 USD</p>
             </div>
             <div class="catalog__machine">
                 <img src="../img/machine.png" alt="machine" width="380" height="385">
-                <a class="machine-learn" href="#"> 
-                    <div class="learn-more-machine">
-                        <p class="machine-text">LEARN MORE</p>
+                <a class="catalog__machine-learn" href="#"> 
+                    <div class="catalog__more-machine">
+                        <p class="catalog__machine-text">LEARN MORE</p>
                     </div>
                 </a>
-                <p class="catalog__name__machine">GATCHA GATCHA GUMBALL MACHINE</p>
-                <p class="price-machine">$56.00 USD</p>
+                <p class="catalog__name-machine">GATCHA GATCHA GUMBALL MACHINE</p>
+                <p class="catalog__price-machine">$56.00 USD</p>
             </div>
             <div class="catalog__candle">
                 <img src="../img/candle.png" alt="candle" width="380" height="385">
-                <a class="candle-learn" href="#">
-                    <div class="learn-more-candle">
-                        <p class="candle-text">LEARN MORE</p>
+                <a class="catalog__candle-learn" href="#">
+                    <div class="catalog__more-candle">
+                        <p class="catalog__candle-text">LEARN MORE</p>
                     </div>
                 </a>
-                <p class="catalog__name__candle">CHRISTMAS ADVENT SCENTED CANDLE</p>
-                <p class="price-candle">$29.00 USD</p>
+                <p class="catalog__name-candle">CHRISTMAS ADVENT SCENTED CANDLE</p>
+                <p class="catalog__price-candle">$29.00 USD</p>
             </div>
             <div class="catalog__tangle">
                 <img src="../img/tangle.png" alt="tangle" width="380" height="382">
-                <a class="tangle-learn" href="#">
-                    <div class="learn-more-tangle">
-                        <p class="tangle-text">LEARN MORE</p>
+                <a class="catalog__tangle-learn" href="#">
+                    <div class="catalog__more-tangle">
+                        <p class="catalog__tangle-text">LEARN MORE</p>
                     </div>
                 </a>
-                <p class="catalog__name__tangle">TANGLE SPINNING TEA LIGHT</p>
-                <p class="price-tangle">$56.00 USD</p>
+                <p class="catalog__name-tangle">TANGLE SPINNING TEA LIGHT</p>
+                <p class="catalog__price-tangle">$56.00 USD</p>
             </div>
             </div>
     </div>
     </section>
 
-    <div class="slider">
-        <div class="container">
-            <div class="slider__wrapper">
-                <img class="slider__img__left" src="../img/arrowleftwhite.svg" alt="arrowleft">
-            <ul class="slider__list">
-                <li class="slider__list-item">1</li>
-                <li class="slider__list-item">2</li>
-                <li class="slider__list-item">3</li>
-                <li class="slider__list-item">4</li>    
-            </ul>
-            <img class="slider__img__rigth" src="../img/arrowrightwhite.svg" alt="arrowright">
-            </div>
-        </div>
-    </div>
-
+    @@include('blocks/slider.html')
 
 </main>
 @@include('blocks/footer.html')    
