--- a/source/animation.html
+++ b/source/animation.html
@@ -18,7 +18,7 @@
     @@include('blocks/header.html')
     <main>
         <section class="page__animation">
-            <div class="container container__width">
+            <div class="container__width">
                 <h1 class="page__animation-main">Animation scene</h1>
                 <ul class="page__animation-text">
                     <li><a class="page__animation-item" href="../index.html">Home</a></li>
