--- a/source/svg.html
+++ b/source/svg.html
@@ -19,7 +19,7 @@
     @@include('blocks/header.html')
     <main>
         <section class="pages__svg">
-            <div class="container container__width">
+            <div class="container">
                 <h1 class="pages__svg-main">SVG animation</h1>
                 <ul class="pages__svg-text">
                     <li><a class="pages__svg-item" href="../index.html">Home</a></li>
