--- a/source/toys.html
+++ b/source/toys.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="catalog__wrap">
                 <div class="catalog__shark">
-                    <img class="catalog__shark-img" src="../img/shark.png" alt="shark" width="380" height="385">
+                    <img class="catalog__shark-img" src="../img/shark.png" alt="shark-shaped pillow" width="380" height="385">
                     <a class="catalog__shark-learn" href="#">
                         <div class="catalog__shark-learnmore">
                             <p class="catalog__sharktext">LEARN MORE</p>
@@ -118,7 +118,7 @@
                 <p class="catalog__price-cibo">$60.00 USD</p>
             </div>
             <div class="catalog__machine">
-                <img class="catalog__machine-img" src="../img/machine.png" alt="machine" width="380" height="385">
+                <img class="catalog__machine-img" src="../img/machine.png" alt="candy machine" width="380" height="385">
                 <a class="catalog__machine-learn" href="#"> 
                     <div class="catalog__more-machine">
                         <p class="catalog__machine-text">LEARN MORE</p>
@@ -128,7 +128,7 @@
                 <p class="catalog__price-machine">$56.00 USD</p>
             </div>
             <div class="catalog__candle">
-                <img class="catalog__candle-img" src="../img/candle.png" alt="candle" width="380" height="385">
+                <img class="catalog__candle-img" src="../img/candle.png" alt="new year candle" width="380" height="385">
                 <a class="catalog__candle-learn" href="#">
                     <div class="catalog__more-candle">
                         <p class="catalog__candle-text">LEARN MORE</p>
