--- a/source/blog.html
+++ b/source/blog.html
@@ -34,27 +34,27 @@
             <div class="container">
                 <div class="titles__wrapper">
                     <ul class="des">
-                        <li class="titles__des"><img class="titles__des-img" src="../img/des.png" alt="des" width="380" height="220">
+                        <li class="titles__des"><img class="titles__des-img" src="../img/des.png" alt="lego toys" width="380" height="220">
                             <p class="titles__date">23rd August 2018</p>
                             <a href="#" class="titles__tl">Top 5 fastest growing it service companies in philly</a>
                             <p class="titles__text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
-                            <li class="panda"><img class="titles__panda-img" src="../img/panda.png" alt="panda" width="380" height="220">
+                            <li class="panda"><img class="titles__panda-img" src="../img/panda.png" alt="panda figurine" width="380" height="220">
                                 <p class="titles__panda-date">23rd August 2018</p>
                                 <a href="#" class="titles__panda-tl">Best financial</a>
                                 <p class="titles__panda-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
-                            <li class="monkey"><img class="titles__monkey-img" src="../img/monkey.png" alt="monkey" width="380" height="220">
+                            <li class="monkey"><img class="titles__monkey-img" src="../img/monkey.png" alt="lego monkey" width="380" height="220">
                                 <p class="titles__monkey-date">23rd August 2018</p>
                                 <a href="#" class="titles__monkey-tl">Company logo or brand identity: which one is more important? brand identity</a>
                                 <p class="titles__monkey-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
-                            <li class="baz"><img class="titles__baz-img" src="../img/baz.png" alt="baz">
+                            <li class="baz"><img class="titles__baz-img" src="../img/baz.png" alt="bazlatera figurine">
                                 <p class="titles__baz-date">23rd August 2018</p>
                                 <a href="#" class="titles__baz-tl">Best financial</a>
                                 <p class="titles__baz-text">Direct Line Development is honored to be recognized as one of the Top 100 Fastest Growing Companies 2019 in Philadelphia, according to Growjo’s ranking.</p></li>
-                            <li class="prinesse"><img class="titles__prinesse-img" src="../img/prinesse.png" alt="prinesse" width="380" height="220">
+                            <li class="prinesse"><img class="titles__prinesse-img" src="../img/prinesse.png" alt="prinesse figurine" width="380" height="220">
                                 <p class="titles__prinesse-date">23rd August 2018</p>
                                 <a href="#" class="titles__prinesse-tl">Company logo or brand identity: which one is more important? brand identity</a>
                                 <p class="titles__prinesse-text">To survive in the world of digital marketing, you need to keep up with the latest SEO trends. Here are our simple, but effective, SEO tips for small business success.</p></li>
-                            <li class="cubes"><img class="titles__cubes-img" src="../img/cubes.png" alt="cubes" width="380" height="220">
+                            <li class="cubes"><img class="titles__cubes-img" src="../img/cubes.png" alt="game cubes" width="380" height="220">
                                 <p class="titles__cubes-date">23rd August 2018</p>
                                 <a href="#" class="titles__cubes-tl">Top 5 fastest growing it service companies in philly</a>
                                 <p class="titles__cubes-text">Direct Line Development’s Team is excited to announce that we received UpCity’s 2019 Local Excellence Award! This prestigious award is annually presented to the Top 1% of service providers in the given marketplace.</p></li>
