--- a/source/catalog.html
+++ b/source/catalog.html
@@ -31,17 +31,17 @@
         <div class="catalog">
             <div class="container">
                 <ul class="catalog__product">
-                    <li class="catalog__product-kid"><img class="catalog__product-kidimg" src="../img/kids.jpg" alt="kids" width="280" height="270">  
+                    <li class="catalog__product-kid"><img class="catalog__product-kidimg" src="../img/kids.jpg" alt="shirt catalog" width="280" height="270">  
                         <a href="#" class="catalog__product-text">APPAREL KIDS</a></li>
-                    <li class="catalog__product-sh"><img class="catalog__product-shimg" src="../img/holiday.png" alt="HOLIDAY SHOP" width="208" height="244">
+                    <li class="catalog__product-sh"><img class="catalog__product-shimg" src="../img/holiday.png" alt="holiday sock catalog" width="208" height="244">
                         <a href="#" class="catalog__product-shtext">HOLIDAY SHOP</a></li>
-                    <li class="catalog__product-toy"><img class="catalog__product-toyimg" src="../img/toys.png" alt="toys" width="280" height="270">
+                    <li class="catalog__product-toy"><img class="catalog__product-toyimg" src="../img/toys.png" alt="figurine catalog " width="280" height="270">
                         <a href="toys.html" class="catalog__product-toytext">TOYS</a></li>
-                    <li class="catalog__product-access"><img class="catalog__product-accessimg" src="../img/accessories.png" alt="accessories" width="240" height="250">
+                    <li class="catalog__product-access"><img class="catalog__product-accessimg" src="../img/accessories.png" alt="catalog of unusual socks" width="240" height="250">
                         <a href="#" class="catalog__product-accesstext">ACCESSORIES</a></li>
-                        <li class="catalog__product-bird"><img class="catalog__product-birdimg" src="../img/bird.png" alt="bird" width="248" height="248">
+                        <li class="catalog__product-bird"><img class="catalog__product-birdimg" src="../img/bird.png" alt="swimming bird" width="248" height="248">
                         <a href="#" class="catalog__product-birdtext">SALE</a></li>
-                        <li class="catalog__product-rabbit"><img class="catalog__product-rabbitimg" src="../img/rabbit.png" alt="rabbit" width="271" height="204">
+                        <li class="catalog__product-rabbit"><img class="catalog__product-rabbitimg" src="../img/rabbit.png" alt="women's shirts" width="271" height="204">
                         <a href="#" class="catalog__product-rabbittext">APPAREL ADULTS</a></li>
                 </ul>
             </div>
