--- a/source/grid.html
+++ b/source/grid.html
@@ -55,7 +55,7 @@
                     <div class="wrapper__grid-textthree">
                         <p class="wrapper__grid-namethree">IMAC.RETINA</p>
                         <p class="wrapper__grid-titlethree">Hardly a month passes these days where</p>
-                        <img class="wrapper__grid-imgthree" src="./img/grid/comp.png" alt="comp" width="352" height="164">
+                        <img class="wrapper__grid-imgthree" src="./img/grid/comp.png" alt="old imac" width="352" height="164">
                     </div>
                    <div class="wrapper__grid-flex">
                             <p class="wrapper__grid-txtthree">Apple may be experimenting in the virtual reality space. The company has been granted a patent for a head-mounted virtual reality device that would use the iPhone screen as the display.</p>
@@ -65,7 +65,7 @@
                 <div class="wrapper__grid-boxfour">
                         <div class="wrapper__fourflex-one">
                             <p class="wrapper__grid-namefour">POPULAR</p>
-                            <img class="wrapper__grid-imgfour" src="./img/grid/floppy.png" alt="floppy" width="180" height="186">
+                            <img class="wrapper__grid-imgfour" src="./img/grid/floppy.png" alt="floppy disk" width="180" height="186">
                             <p class="wrapper__grid-titlefour">MEET</p>
                         </div>
                     <div class="wrapper__grid-flexfour">
@@ -85,14 +85,14 @@
                 </div>
                 <div class="wrapper__grid-boxsix">
                     <div class="wrapper__grid-textsix">
-                        <img class="wrapper__grid-imgsix" src="./img/grid/game.png" alt="game" width="303" height="167">
+                        <img class="wrapper__grid-imgsix" src="./img/grid/game.png" alt="joystick" width="303" height="167">
                         <p class="wrapper__grid-namesix">Games ourpasion</p>
                         <a href="#" class="wrapper__grid-titlesix">LEARN ›</a>
                     </div>
                 </div>
                 <div class="wrapper__grid-boxseven">
                     <div class="wrapper__grid-textseven">
-                        <img class="wrapper__grid-imgseven" src="./img/grid/cam.png" alt="cam" width="59" height="59">
+                        <img class="wrapper__grid-imgseven" src="./img/grid/cam.png" alt="camera" width="59" height="59">
                         <a href="#" class="wrapper__grid-titleseven">Follow me ›</a>
                     </div>
                 </div>
