--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="./css/contactus.css">
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/svg.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>DL Academy</title>
-    <meta name="description" content="">
+
+    <title>DLK is an amazing custom toy store</title>
+    <meta name="description" content="With the help of our store you will find a gift for every taste and wallet. Also we can make products exactly according to your layout in the shortest possible time. The first customers are given tremendous discounts and bonuses.">
     <meta name="keywords" content="">
 
     <script>
@@ -55,13 +55,7 @@
                     })
                     <!-- <button type="button" class="button-btn button-btn-js">EXPLORE NOW</button>  -->
                 </div>
-                <img class="banner__img" src="./img/image/monster.png" alt="monster" width="636" height="461">
-                <!-- <picture>
-                  <source class="banner__img" srcset="./img/image/monster.png" type="image/png" max-width="636" max-height="461" media="(min-width:768px)"> 
-                  <source class="banner__img" srcset="./img/image/monster292x226.png" type="image/png" media="(min-width:376px)">
-                  <source class="banner__img" srcset="./img/image/monster385x286.png" type="image/png" media="(max-width:375px)">
-                  <img class="banner__img" src="./img/image/monster.png" alt="monster">
-                </picture> -->
+                <img class="banner__img" src="./img/image/monster.png" alt="Pillow in the form of a monster on a wheelbarrow" width="636" height="461">
             </div>
           </div>
           <div class="container">
@@ -72,34 +66,34 @@
           <div class="container container-catalog">
               <h2 class="catalog__title">CATEGORY PRODUCTS</h2>
               <ul class="catalog__products">
-                  <li class="catalog__products-kids"><img class="catalog-kids-img" src="./img/kids.jpg" alt="kids" width="280" height="270">  
+                  <li class="catalog__products-kids"><img class="catalog-kids-img" src="./img/kids.jpg" alt="Shirt with a picture of a crocodile " width="280" height="270">  
                       <a href="#" class="catalog__products-text">APPAREL KIDS</a></li>
-                  <li class="catalog__products-shop"><img class="catalog-shop-img" src="./img/holiday.png" alt="HOLIDAY SHOP" width="208" height="244">
+                  <li class="catalog__products-shop"><img class="catalog-shop-img" src="./img/holiday.png" alt="Sock in the shape of a reindeer" width="208" height="244">
                       <a href="#" class="catalog__products-text">HOLIDAY SHOP</a></li>
-                  <li class="catalog__products-toys"><img class="catalog-toys-img" src="./img/toys.png" alt="toys" width="270" height="270">
+                  <li class="catalog__products-toys"><img class="catalog-toys-img" src="./img/toys.png" alt="Reindeer figurine" width="270" height="270">
                       <a href="toys.html" class="catalog__products-text">TOYS</a></li>
-                  <li class="catalog__products-accessories"><img class="catalog-accessories-img" src="./img/accessories.png" alt="accessories" width="240" height="250">
+                  <li class="catalog__products-accessories"><img class="catalog-accessories-img" src="./img/accessories.png" alt="Sock toy on a skateboard" width="240" height="250">
                       <a href="#" class="catalog__products-text">ACCESSORIES</a></li>
               </ul>
-              <div class="catalog__slider">
-                  <div class="container">
-                      <div class="catalog__slider-arrows">
-                          <button class="catalog__slider-left"></button>
-                          <img class="catalog__slider-positionleft" src="./img/left.svg" alt="left" width="37" height="37">
-                          <button class="catalog__slider-right"></button>
-                          <img class="catalog__slider-positionright" src="./img/right.svg" alt="right" width="37" height="37">
-                          <p class="catalog__slider-text">Modern finds for the modern home. Curated goods by unique designers around
-                              the world from fashion to furniture for kids and adults.</p>
-                      </div>
-                  </div>
-              </div>
           </div>
       </section>
+      <!-- <div class="catalog__slider"> -->
+        <div class="container catalog__slider">
+            <div class="catalog__slider-arrows">
+                <button class="catalog__slider-left"></button>
+                <img class="catalog__slider-positionleft" src="./img/left.svg" alt="left" width="37" height="37">
+                <button class="catalog__slider-right"></button>
+                <img class="catalog__slider-positionright" src="./img/right.svg" alt="right" width="37" height="37">
+                <p class="catalog__slider-text">Modern finds for the modern home. Curated goods by unique designers around
+                    the world from fashion to furniture for kids and adults.</p>
+            </div>
+        </div>
+    <!-- </div> -->
 
       <section class="delivery">
           <div class="container container-catalog">
               <div class="delivery__info">
-                  <img class="delivery-img" src="./img/women.png" alt="women" width="480" height="559">
+                  <img class="delivery-img" src="./img/women.png" alt="A joyful woman" width="480" height="559">
           <div class="delivery__more">
               <h2 class="delivery__text">Delivery</h2>
               <div class="delivery__list">
@@ -126,40 +120,36 @@
               <div class="container container-catalog">
                   <ul class="brands__flex">
                       <li class="brands__flex-mail"> 
-                        <!-- <img  src="./img/mail.png" alt="mail" width="193" height="60"> -->
                         <picture> 
                             <source srcset="./img/image/mail.png" type="image/png" max-width="193" max-height="60" media="(min-width:965px)"> 
                             <source srcset="./img/image/mail106x33.png" type="image/png" media="(min-width:376px)">
                             <source srcset="./img/image/mail131x42.png" type="image/png" media="(max-width:375px)">
-                            <img src="./img/image/mail.png" alt="mail">
+                            <img src="./img/image/mail.png" alt="logo-mail">
                           </picture>
                     </li>
         
                       <li class="brands__flex-apple">
-                        <!-- <img class="brands__flex-apple" src="./img/apple.png" alt="apple" width="179" height="61"> -->
                         <picture> 
                         <source srcset="./img/image/apple.png" type="image/png" max-width="179" max-height="61" media="(min-width:965px)"> 
                         <source srcset="./img/image/apple98x33.png" type="image/png"media="(min-width:375px)">
                         <source srcset="./img/image/apple109x38.png" type="image/png" media="(max-width:374px)">
-                        <img src="./img/image/apple.png" alt="apple">
+                        <img src="./img/image/apple.png" alt="logo-apple">
                       </picture>
                     </li>
                       <li class="brands__flex-eltex">
-                        <!-- <img class="brands__flex-eltex" src="./img/eltex.png" alt="eltex" width="216" height="46"> -->
                         <picture> 
                         <source srcset="./img/image/eltex.png" type="image/png" max-width="216" max-height="46" media="(min-width:965px)"> 
                         <source srcset="./img/image/eltex118x25.png" type="image/png"media="(min-width:375px)">
                         <source srcset="./img/image/eltex149x32.png" type="image/png" media="(max-width:374px)">
-                        <img src="./img/image/eltex.png" alt="eltex">
+                        <img src="./img/image/eltex.png" alt="logo-eltex">
                       </picture>
                     </li>
                       <li class="brands__flex-owox">
-                        <!-- <img class="brands__flex-owox" src="./img/owox.png" alt="owox" width="211" height="40"> -->
                         <picture> 
                         <source srcset="./img/image/owox.png" type="image/png" max-width="211" max-height="40" media="(min-width:940px)"> 
                         <source srcset="./img/image/owox116x22.png" type="image/png" media="(min-width:375px)">
                         <source srcset="./img/image/owox143x26.png" type="image/png" media="(max-width:374px)">
-                        <img src="./img/image/owox.png" alt="owox">
+                        <img src="./img/image/owox.png" alt="logo-owox">
                       </picture>
                     </li>
                   </ul>
@@ -178,7 +168,6 @@
                         "button-text": "BUY NOW",
                         "class": "button-info",
                       })
-                      <!-- <button class="button-info">buy now</button> -->
                   </div>
               <div class="info__contacts">
                   <h3 class="info__contacts-text">Contacts</h3>
@@ -186,7 +175,7 @@
                           <p class="info__contacts-title">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
                               <div class="map">
                                  <div id="map-element" class="map__element">
-                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5510575195826!2d49.2880382517228!3d53.512214679916035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879ed1ada6fbd%3A0x751234490b1ca980!2sDirect%20Line%20Digital!5e0!3m2!1sru!2sru!4v1665376044203!5m2!1sru!2sru" width="100%" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                  <iframe class="map-content" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.5510575195826!2d49.2880382517228!3d53.512214679916035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x416879ed1ada6fbd%3A0x751234490b1ca980!2sDirect%20Line%20Digital!5e0!3m2!1sru!2sru!4v1665376044203!5m2!1sru!2sru" width="100%" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
                       </div>
                   </div>
@@ -213,5 +202,9 @@
     <script src="js/app.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <audio controls autoplay>
+    <source src="./audio/music.mp3" type="audio/ogg; codecs=vorbis">
+    <source src="./audio/music.ogg" type="audio/mpeg; codecs=vorbis">
+  </audio>
   </body>
 </html>
