--- a/source/animation.html
+++ b/source/animation.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/toys.css">
-    <link rel="stylesheet" href="../css/contactus.css">
-    <link rel="stylesheet" href="../css/svg.css">
+<!doctype html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="google" content="notranslate">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="./css/style.css">
     <title>animation</title>
 </head>
 
@@ -22,7 +17,7 @@
                 <h1 class="page__animation-main">Animation scene</h1>
                 <ul class="page__animation-text">
                     <li><a class="page__animation-item" href="../index.html">Home</a></li>
-                    <li><img class="page__animation-arrow" src="../img/arrowblack.svg" alt="arrow"></li>
+                    <li><img class="page__animation-arrow" src="./img/arrowblack.svg" alt="arrow"></li>
                     <li><a class="page__animation-item" href="../animation.html">Animation</a></li>
                 </ul>
                 <!-- <div class="page__animation-pictures"> -->
