--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/catalog.css">
-    <link rel="stylesheet" href="./css/animation.css">
-    <link rel="stylesheet" href="../css/svg.css">
+<!doctype html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="google" content="notranslate">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Catalog</title>
 </head>
 
@@ -22,7 +17,7 @@
                 <h1 class="category__title">CATEGORY PRODUCTS</h1>
                     <ul class="category__home">
                         <li><a class="category__home-item" href="../index.html">Home</a></li>
-                        <li><img class="category__home-arrow" src="../img/arrowblack.svg" alt="arrow"></li>
+                        <li><img class="category__home-arrow" src="./img/arrowblack.svg" alt="arrow"></li>
                         <li class="category__home-it">Catalog</li>
                     </ul>                
             </div>
@@ -31,17 +26,17 @@
         <div class="catalog">
             <div class="container">
                 <ul class="catalog__product">
-                    <li class="catalog__product-kid"><img class="catalog__product-kidimg" src="../img/kids.jpg" alt="shirt catalog" width="280" height="270">  
+                    <li class="catalog__product-kid"><img class="catalog__product-kidimg" src="./img/kids.jpg" alt="shirt catalog" width="280" height="270">  
                         <a href="#" class="catalog__product-text">APPAREL KIDS</a></li>
-                    <li class="catalog__product-sh"><img class="catalog__product-shimg" src="../img/holiday.png" alt="holiday sock catalog" width="208" height="244">
+                    <li class="catalog__product-sh"><img class="catalog__product-shimg" src="./img/holiday.png" alt="holiday sock catalog" width="208" height="244">
                         <a href="#" class="catalog__product-shtext">HOLIDAY SHOP</a></li>
-                    <li class="catalog__product-toy"><img class="catalog__product-toyimg" src="../img/toys.png" alt="figurine catalog " width="280" height="270">
+                    <li class="catalog__product-toy"><img class="catalog__product-toyimg" src="./img/toys.png" alt="figurine catalog " width="280" height="270">
                         <a href="toys.html" class="catalog__product-toytext">TOYS</a></li>
-                    <li class="catalog__product-access"><img class="catalog__product-accessimg" src="../img/accessories.png" alt="catalog of unusual socks" width="240" height="250">
+                    <li class="catalog__product-access"><img class="catalog__product-accessimg" src="./img/accessories.png" alt="catalog of unusual socks" width="240" height="250">
                         <a href="#" class="catalog__product-accesstext">ACCESSORIES</a></li>
-                        <li class="catalog__product-bird"><img class="catalog__product-birdimg" src="../img/bird.png" alt="swimming bird" width="248" height="248">
+                        <li class="catalog__product-bird"><img class="catalog__product-birdimg" src="./img/bird.png" alt="swimming bird" width="248" height="248">
                         <a href="#" class="catalog__product-birdtext">SALE</a></li>
-                        <li class="catalog__product-rabbit"><img class="catalog__product-rabbitimg" src="../img/rabbit.png" alt="women's shirts" width="271" height="204">
+                        <li class="catalog__product-rabbit"><img class="catalog__product-rabbitimg" src="./img/rabbit.png" alt="women's shirts" width="271" height="204">
                         <a href="#" class="catalog__product-rabbittext">APPAREL ADULTS</a></li>
                 </ul>
             </div>
