--- a/source/contactus.html
+++ b/source/contactus.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/toys.css">
-    <link rel="stylesheet" href="../css/contactus.css">
-    <link rel="stylesheet" href="../css/animation.css">
-    <link rel="stylesheet" href="../css/svg.css">
+<!doctype html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="google" content="notranslate">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Contact US</title>
 </head>
 
@@ -25,7 +19,7 @@
             <h1 class="contact__title">Contact  Us</h1>
                 <ul class="contact__wrapper">
                     <li><a class="contact__home-item" href="../index.html">Home</a></li>
-                    <li><img class="arrow-home" src="../img/arrowblack.svg" alt=""></li>
+                    <li><img class="arrow-home" src="./img/arrowblack.svg" alt=""></li>
                     <li><a class="contact__home-it" href="#">Contact us</a></li>
                 </ul>                
         </div>
