--- a/source/grid.html
+++ b/source/grid.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/toys.css">
-    <link rel="stylesheet" href="../css/contactus.css">
-    <link rel="stylesheet" href="../css/svg.css">
+<!doctype html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="google" content="notranslate">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="./css/style.css">
     <title>grid</title>
 </head>
 </head>
@@ -22,7 +17,7 @@
                 <h1 class="grid__main">GRID</h1>
                 <ul class="grid__text">
                     <li><a class="grid__item" href="../index.html">Home</a></li>
-                    <li><img class="grid__arrow" src="../img/arrowblack.svg" alt="arrow"></li>
+                    <li><img class="grid__arrow" src="./img/arrowblack.svg" alt="arrow"></li>
                     <li><a class="grid__item" href="../svg.html">GRID</a></li>
                 </ul>
             </div>
