--- a/source/toys.html
+++ b/source/toys.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-    
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/toys.css">
+<!doctype html>
+<html lang="en" class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="google" content="notranslate">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Toys</title>
 </head>
 <body>
@@ -19,9 +16,9 @@
             <h1 class="toy__title">Toy for kids</h1>
                 <ul class="toy__home">
                     <li><a class="toy__home-item" href="../index.html">Home</a></li>
-                    <li><img class="toy__home-arrow" src="../img/arrowblack.svg" alt="arrow"></li>
+                    <li><img class="toy__home-arrow" src="./img/arrowblack.svg" alt="arrow"></li>
                     <li><a class="toy__home-it" href="./catalog.html">Catalog</a></li>
-                    <li><img class="arrow-home" src="../img/arrowblack.svg" alt="arrow"></li>
+                    <li><img class="arrow-home" src="./img/arrowblack.svg" alt="arrow"></li>
                     <li class="toy__home-ite">Toys</li>
                 </ul>                
         </div>
@@ -88,7 +85,7 @@
         <div class="container">
             <div class="catalog__wrap">
                 <div class="catalog__shark">
-                    <img class="catalog__shark-img" src="../img/shark.png" alt="shark-shaped pillow" width="380" height="385">
+                    <img class="catalog__shark-img" src="./img/shark.png" alt="shark-shaped pillow" width="380" height="385">
                     <a class="catalog__shark-learn" href="#">
                         <div class="catalog__shark-learnmore">
                             <p class="catalog__sharktext">LEARN MORE</p>
@@ -98,7 +95,7 @@
                     <p class="catalog__shark-price">$60.00 USD</p>
                 </div>
                 <div class="catalog__brass">
-                    <img class="catalog__brass-img" src="../img/brass.png" alt="brass" width="380" height="385">
+                    <img class="catalog__brass-img" src="./img/brass.png" alt="brass" width="380" height="385">
                     <a class="catalog__brass-learn" href="#">
                         <div class="catalog__more-brass">
                             <p class="catalog__brasstext">LEARN MORE</p>
@@ -108,7 +105,7 @@
                     <p class="catalog__price-brass">$66.00 USD</p>
                 </div>
             <div class="catalog__cibo">
-                <img class="catalog__cibo-img" src="../img/cibo.png" alt="cibo" width="380" height="385">
+                <img class="catalog__cibo-img" src="./img/cibo.png" alt="cibo" width="380" height="385">
                 <a class="catalog__cibo-learn" href="#">
                     <div class="catalog__more-cibo">
                         <p class="catalog__cibotext">LEARN MORE</p>
@@ -118,7 +115,7 @@
                 <p class="catalog__price-cibo">$60.00 USD</p>
             </div>
             <div class="catalog__machine">
-                <img class="catalog__machine-img" src="../img/machine.png" alt="candy machine" width="380" height="385">
+                <img class="catalog__machine-img" src="./img/machine.png" alt="candy machine" width="380" height="385">
                 <a class="catalog__machine-learn" href="#"> 
                     <div class="catalog__more-machine">
                         <p class="catalog__machine-text">LEARN MORE</p>
@@ -128,7 +125,7 @@
                 <p class="catalog__price-machine">$56.00 USD</p>
             </div>
             <div class="catalog__candle">
-                <img class="catalog__candle-img" src="../img/candle.png" alt="new year candle" width="380" height="385">
+                <img class="catalog__candle-img" src="./img/candle.png" alt="new year candle" width="380" height="385">
                 <a class="catalog__candle-learn" href="#">
                     <div class="catalog__more-candle">
                         <p class="catalog__candle-text">LEARN MORE</p>
@@ -138,7 +135,7 @@
                 <p class="catalog__price-candle">$29.00 USD</p>
             </div>
             <div class="catalog__tangle">
-                <img class="catalog__tangle-img" src="../img/tangle.png" alt="tangle" width="380" height="382">
+                <img class="catalog__tangle-img" src="./img/tangle.png" alt="tangle" width="380" height="382">
                 <a class="catalog__tangle-learn" href="#">
                     <div class="catalog__more-tangle">
                         <p class="catalog__tangle-text">LEARN MORE</p>
